--- a/免费版注册.html
+++ b/免费版注册.html
@@ -25,49 +25,25 @@
     <div id="base" class="">
 
       <!-- Unnamed (图片) -->
-      <div id="u209" class="ax_default _图片">
-        <img id="u209_img" class="img " src="images/免费版注册/u209.jpg"/>
+      <div id="u212" class="ax_default _图片">
+        <img id="u212_img" class="img " src="images/免费版注册/u212.jpg"/>
       </div>
 
       <!-- top (动态面板) -->
-      <div id="u210" class="ax_default" data-label="top">
-        <div id="u210_state0" class="panel_state" data-label="State1" style="">
-          <div id="u210_state0_content" class="panel_state_content">
+      <div id="u213" class="ax_default" data-label="top">
+        <div id="u213_state0" class="panel_state" data-label="State1" style="">
+          <div id="u213_state0_content" class="panel_state_content">
 
             <!-- Unnamed (矩形) -->
-            <div id="u211" class="ax_default box_1">
-              <div id="u211_div" class=""></div>
-            </div>
-
-            <!-- Unnamed (矩形) -->
-            <div id="u212" class="ax_default box_2">
-              <div id="u212_div" class=""></div>
-              <div id="u212_text" class="text ">
-                <p><span>LOGO</span></p>
-              </div>
-            </div>
-
-            <!-- Unnamed (矩形) -->
-            <div id="u213" class="ax_default heading_3">
-              <div id="u213_div" class=""></div>
-              <div id="u213_text" class="text ">
-                <p><span>管先生-智能企业IT助手</span></p>
-              </div>
-            </div>
-
-            <!-- Unnamed (矩形) -->
-            <div id="u214" class="ax_default heading_3">
+            <div id="u214" class="ax_default box_1">
               <div id="u214_div" class=""></div>
-              <div id="u214_text" class="text ">
-                <p><span>产品介绍</span></p>
-              </div>
             </div>
 
             <!-- Unnamed (矩形) -->
-            <div id="u215" class="ax_default heading_3">
+            <div id="u215" class="ax_default box_2">
               <div id="u215_div" class=""></div>
               <div id="u215_text" class="text ">
-                <p><span>功能演示</span></p>
+                <p><span>LOGO</span></p>
               </div>
             </div>
 
@@ -75,37 +51,65 @@
             <div id="u216" class="ax_default heading_3">
               <div id="u216_div" class=""></div>
               <div id="u216_text" class="text ">
+                <p><span>管先生-智能企业IT助手</span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (矩形) -->
+            <div id="u217" class="ax_default heading_3">
+              <div id="u217_div" class=""></div>
+              <div id="u217_text" class="text ">
+                <p><span>产品介绍</span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (矩形) -->
+            <div id="u218" class="ax_default heading_3">
+              <div id="u218_div" class=""></div>
+              <div id="u218_text" class="text ">
+                <p><span>功能演示</span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (矩形) -->
+            <div id="u219" class="ax_default heading_3">
+              <div id="u219_div" class=""></div>
+              <div id="u219_text" class="text ">
                 <p><span>联系我们</span></p>
               </div>
             </div>
 
             <!-- Unnamed (动态面板) -->
-            <div id="u217" class="ax_default">
-              <div id="u217_state0" class="panel_state" data-label="State1" style="">
-                <div id="u217_state0_content" class="panel_state_content">
+            <div id="u220" class="ax_default">
+              <div id="u220_state0" class="panel_state" data-label="State1" style="">
+                <div id="u220_state0_content" class="panel_state_content">
                 </div>
               </div>
+            </div>
+
+            <!-- Unnamed (热区) -->
+            <div id="u221" class="ax_default">
             </div>
           </div>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u218" class="ax_default box_1">
-        <div id="u218_div" class=""></div>
-        <div id="u218_text" class="text ">
+      <div id="u222" class="ax_default box_1">
+        <div id="u222_div" class=""></div>
+        <div id="u222_text" class="text ">
           <p><span>欢迎注册标准版</span></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u219" class="ax_default box_2">
-        <div id="u219_div" class=""></div>
+      <div id="u223" class="ax_default box_2">
+        <div id="u223_div" class=""></div>
       </div>
 
       <!-- Unnamed (图片) -->
-      <div id="u220" class="ax_default _图片">
-        <img id="u220_img" class="img " src="images/首页/u46.png"/>
+      <div id="u224" class="ax_default _图片">
+        <img id="u224_img" class="img " src="images/首页/u47.png"/>
       </div>
     </div>
   </body>
