--- a/登录.html
+++ b/登录.html
@@ -25,100 +25,110 @@
     <div id="base" class="">
 
       <!-- top (动态面板) -->
-      <div id="u234" class="ax_default" data-label="top">
-        <div id="u234_state0" class="panel_state" data-label="State1" style="">
-          <div id="u234_state0_content" class="panel_state_content">
+      <div id="u239" class="ax_default" data-label="top">
+        <div id="u239_state0" class="panel_state" data-label="State1" style="">
+          <div id="u239_state0_content" class="panel_state_content">
 
             <!-- Unnamed (矩形) -->
-            <div id="u235" class="ax_default box_1">
-              <div id="u235_div" class=""></div>
+            <div id="u240" class="ax_default box_1">
+              <div id="u240_div" class=""></div>
             </div>
 
             <!-- Unnamed (矩形) -->
-            <div id="u236" class="ax_default box_2">
-              <div id="u236_div" class=""></div>
-              <div id="u236_text" class="text ">
+            <div id="u241" class="ax_default box_2">
+              <div id="u241_div" class=""></div>
+              <div id="u241_text" class="text ">
                 <p><span>LOGO</span></p>
               </div>
             </div>
 
             <!-- Unnamed (矩形) -->
-            <div id="u237" class="ax_default heading_3">
-              <div id="u237_div" class=""></div>
-              <div id="u237_text" class="text ">
+            <div id="u242" class="ax_default heading_3">
+              <div id="u242_div" class=""></div>
+              <div id="u242_text" class="text ">
                 <p><span>管先生-智能企业IT助手</span></p>
               </div>
             </div>
 
             <!-- Unnamed (矩形) -->
-            <div id="u238" class="ax_default heading_3">
-              <div id="u238_div" class=""></div>
-              <div id="u238_text" class="text ">
+            <div id="u243" class="ax_default heading_3">
+              <div id="u243_div" class=""></div>
+              <div id="u243_text" class="text ">
                 <p><span>产品介绍</span></p>
               </div>
             </div>
 
             <!-- Unnamed (矩形) -->
-            <div id="u239" class="ax_default heading_3">
-              <div id="u239_div" class=""></div>
-              <div id="u239_text" class="text ">
+            <div id="u244" class="ax_default heading_3">
+              <div id="u244_div" class=""></div>
+              <div id="u244_text" class="text ">
                 <p><span>功能演示</span></p>
               </div>
             </div>
 
             <!-- Unnamed (矩形) -->
-            <div id="u240" class="ax_default heading_3">
-              <div id="u240_div" class=""></div>
-              <div id="u240_text" class="text ">
+            <div id="u245" class="ax_default heading_3">
+              <div id="u245_div" class=""></div>
+              <div id="u245_text" class="text ">
                 <p><span>联系我们</span></p>
               </div>
             </div>
 
-            <!-- Unnamed (动态面板) -->
-            <div id="u241" class="ax_default">
-              <div id="u241_state0" class="panel_state" data-label="State1" style="">
-                <div id="u241_state0_content" class="panel_state_content">
-                </div>
-              </div>
+            <!-- Unnamed (热区) -->
+            <div id="u246" class="ax_default">
+            </div>
+
+            <!-- Unnamed (热区) -->
+            <div id="u247" class="ax_default">
             </div>
           </div>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u242" class="ax_default box_1">
-        <div id="u242_div" class=""></div>
+      <div id="u248" class="ax_default box_1">
+        <div id="u248_div" class=""></div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u243" class="ax_default heading_3">
-        <div id="u243_div" class=""></div>
-        <div id="u243_text" class="text ">
+      <div id="u249" class="ax_default heading_3">
+        <div id="u249_div" class=""></div>
+        <div id="u249_text" class="text ">
           <p><span>欢迎来到管先生</span></p>
         </div>
       </div>
 
       <!-- Unnamed (图片) -->
-      <div id="u244" class="ax_default _图片">
-        <img id="u244_img" class="img " src="images/登录/u244.png"/>
+      <div id="u250" class="ax_default _图片">
+        <img id="u250_img" class="img " src="images/登录/u250.png"/>
       </div>
 
       <!-- Unnamed (图片) -->
-      <div id="u245" class="ax_default _图片">
-        <img id="u245_img" class="img " src="images/登录/u245.png"/>
+      <div id="u251" class="ax_default _图片">
+        <img id="u251_img" class="img " src="images/登录/u251.png"/>
       </div>
 
       <!-- Unnamed (图片) -->
-      <div id="u246" class="ax_default _图片">
-        <img id="u246_img" class="img " src="images/登录/u246.png"/>
+      <div id="u252" class="ax_default _图片">
+        <img id="u252_img" class="img " src="images/登录/u252.png"/>
       </div>
 
       <!-- Unnamed (动态面板) -->
-      <div id="u247" class="ax_default">
-        <div id="u247_state0" class="panel_state" data-label="State1" style="">
-          <div id="u247_state0_content" class="panel_state_content">
+      <div id="u253" class="ax_default">
+        <div id="u253_state0" class="panel_state" data-label="State1" style="">
+          <div id="u253_state0_content" class="panel_state_content">
           </div>
         </div>
+      </div>
+
+      <!-- Unnamed (矩形) -->
+      <div id="u254" class="ax_default box_2">
+        <div id="u254_div" class=""></div>
+      </div>
+
+      <!-- Unnamed (图片) -->
+      <div id="u255" class="ax_default _图片">
+        <img id="u255_img" class="img " src="images/首页/u47.png"/>
       </div>
     </div>
   </body>
