--- a/购买登记.html
+++ b/购买登记.html
@@ -25,93 +25,97 @@
     <div id="base" class="">
 
       <!-- Unnamed (图片) -->
-      <div id="u221" class="ax_default _图片">
-        <img id="u221_img" class="img " src="images/免费版注册/u209.jpg"/>
+      <div id="u225" class="ax_default _图片">
+        <img id="u225_img" class="img " src="images/免费版注册/u212.jpg"/>
       </div>
 
       <!-- top (动态面板) -->
-      <div id="u222" class="ax_default" data-label="top">
-        <div id="u222_state0" class="panel_state" data-label="State1" style="">
-          <div id="u222_state0_content" class="panel_state_content">
+      <div id="u226" class="ax_default" data-label="top">
+        <div id="u226_state0" class="panel_state" data-label="State1" style="">
+          <div id="u226_state0_content" class="panel_state_content">
 
             <!-- Unnamed (矩形) -->
-            <div id="u223" class="ax_default box_1">
-              <div id="u223_div" class=""></div>
+            <div id="u227" class="ax_default box_1">
+              <div id="u227_div" class=""></div>
             </div>
 
             <!-- Unnamed (矩形) -->
-            <div id="u224" class="ax_default box_2">
-              <div id="u224_div" class=""></div>
-              <div id="u224_text" class="text ">
+            <div id="u228" class="ax_default box_2">
+              <div id="u228_div" class=""></div>
+              <div id="u228_text" class="text ">
                 <p><span>LOGO</span></p>
               </div>
             </div>
 
             <!-- Unnamed (矩形) -->
-            <div id="u225" class="ax_default heading_3">
-              <div id="u225_div" class=""></div>
-              <div id="u225_text" class="text ">
+            <div id="u229" class="ax_default heading_3">
+              <div id="u229_div" class=""></div>
+              <div id="u229_text" class="text ">
                 <p><span>管先生-智能企业IT助手</span></p>
               </div>
             </div>
 
             <!-- Unnamed (矩形) -->
-            <div id="u226" class="ax_default heading_3">
-              <div id="u226_div" class=""></div>
-              <div id="u226_text" class="text ">
+            <div id="u230" class="ax_default heading_3">
+              <div id="u230_div" class=""></div>
+              <div id="u230_text" class="text ">
                 <p><span>产品介绍</span></p>
               </div>
             </div>
 
             <!-- Unnamed (矩形) -->
-            <div id="u227" class="ax_default heading_3">
-              <div id="u227_div" class=""></div>
-              <div id="u227_text" class="text ">
+            <div id="u231" class="ax_default heading_3">
+              <div id="u231_div" class=""></div>
+              <div id="u231_text" class="text ">
                 <p><span>功能演示</span></p>
               </div>
             </div>
 
             <!-- Unnamed (矩形) -->
-            <div id="u228" class="ax_default heading_3">
-              <div id="u228_div" class=""></div>
-              <div id="u228_text" class="text ">
+            <div id="u232" class="ax_default heading_3">
+              <div id="u232_div" class=""></div>
+              <div id="u232_text" class="text ">
                 <p><span>联系我们</span></p>
               </div>
             </div>
 
             <!-- Unnamed (动态面板) -->
-            <div id="u229" class="ax_default">
-              <div id="u229_state0" class="panel_state" data-label="State1" style="">
-                <div id="u229_state0_content" class="panel_state_content">
+            <div id="u233" class="ax_default">
+              <div id="u233_state0" class="panel_state" data-label="State1" style="">
+                <div id="u233_state0_content" class="panel_state_content">
                 </div>
               </div>
+            </div>
+
+            <!-- Unnamed (热区) -->
+            <div id="u234" class="ax_default">
             </div>
           </div>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u230" class="ax_default box_1">
-        <div id="u230_div" class=""></div>
-        <div id="u230_text" class="text ">
+      <div id="u235" class="ax_default box_1">
+        <div id="u235_div" class=""></div>
+        <div id="u235_text" class="text ">
           <p><span>欢迎注册专业版/旗舰版</span></p>
         </div>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u231" class="ax_default box_2">
-        <div id="u231_div" class=""></div>
+      <div id="u236" class="ax_default box_2">
+        <div id="u236_div" class=""></div>
       </div>
 
       <!-- Unnamed (图片) -->
-      <div id="u232" class="ax_default _图片">
-        <img id="u232_img" class="img " src="images/首页/u46.png"/>
+      <div id="u237" class="ax_default _图片">
+        <img id="u237_img" class="img " src="images/首页/u47.png"/>
       </div>
 
       <!-- Unnamed (矩形) -->
-      <div id="u233" class="ax_default label">
-        <div id="u233_div" class=""></div>
-        <div id="u233_text" class="text ">
+      <div id="u238" class="ax_default label">
+        <div id="u238_div" class=""></div>
+        <div id="u238_text" class="text ">
           <p><span>我们将在3个工作日内联系您，在此期间您可以试用标准版功能</span></p>
         </div>
       </div>
